--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 target: document.querySelector('#camera')    // Or '#yourElement' (optional)
             },
             decoder: {
-                readers: ["code_128_reader"]
+                readers: ["ean_13_reader"]
             }
         }, function (err) {
             if (err) {
