--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                 target: document.querySelector('#camera')    // Or '#yourElement' (optional)
             },
             decoder: {
-                readers: ["ean_reader"]
+                readers: [
+            'ean_reader'
+          ],
+          multiple: false
             }
         }, function (err) {
             if (err) {
