--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             // Como exemplo, temos: https://website.com/blog?page=1
             const urlParams = new URLSearchParams(location.search);
 
-            console.log(urlParams.get('ret')); // 1
+            alert(urlParams.get('ret')); // 1
 
         });
 
