--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
         Quagga.onDetected(function (data) {
             console.log(data.codeResult.code);
-            document.querySelector('#resultado').innerText = data.codeResult.code;
+            
             // Passamos a querystring atual através de location.search
             // Como exemplo, temos: https://website.com/blog?page=1
             const urlParams = new URLSearchParams(location.search);
 
-            alert(urlParams.get('ret')); // 1
+            document.querySelector('#resultado').innerText = data.codeResult.code + " " + urlParams.get('ret') // 1
 
         });
 
