--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
            var hash = window.location.hash.substr(1);
 
-           document.querySelector('#resultado').innerText = data.codeResult.code + " " + x + " " + hash ;
+           document.querySelector('#resultado').innerText = data.codeResult.code + " " + hash + " ";
 
         });
 
