--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             var x = urlParams.get('ret'); // 1
             var hash = window.location.hash.substr(1);
 
-            alert(urlParams + " " + x + " " + hash )
+            alert(urlParams + " " + x + "aqui " + hash )
             
 
 
