--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             const urlParams = new URLSearchParams(location.search);
             var x = urlParams.get('ret'); // 1
             var href = window.location.href;
-            var ptr = href.lastIndexOf("#");
+            var ptr = x.lastIndexOf("#");
             if (ptr > 0) {
-                href = href.substr(0, ptr);
+                x = x.substr(0, ptr);
             }
             var hash = window.location.hash.substr(1);
 
