--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             }
             var hash = window.location.hash.substr(1);
             
-            window.location = x;
+            window.location = x+"/#651651";
             alert(urlParams + " " + x + " acabou " + hash + href)
         }
 
